[package]
name = "rtm-yaml"
version = "0.0.2"
rust-version = "1.56.0"
edition = "2021"
authors = ["Begley Brothers Inc. <begleybrothers@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rtm-rs/rtm-yaml"
homepage = "https://rtm-rs.org"
documentation = "https://docs.rs/rtm-yaml"
description = """
Rust Type Mapper (RTM) crate rtm-yaml.
"""
categories = [
    "database",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["async", "orm", "cqrs", "http", "sql"]
autoexamples = false

[lib]
name = "rtm_yaml"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.57"
thiserror = "1.0.30"

[dev-dependencies]
aquamarine = "0.1.11"
criterion = { version = "0.3", features = ["html_reports"] }
futures = "0.3"
futures-timer = "3"
mockall = "0.11"
trybuild = "1"

[features]
# Nothing by default
default = []

[profile.bench]
opt-level = 3
lto = true


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

